# chess-stats

./: .gitignore  Cleaning.ipynb  Gender Gap.ipynb  Scrapping.ipynb  World stats.ipynb  codes.csv  fide_codes.csv  pop.csv  pyproject.toml  using geopandas.html  using geopandas.tex
.ipynb_checkpoints/: Chess Stats-checkpoint.ipynb  Scrapping-checkpoint.ipynb  World stats-checkpoint.ipynb
Data/: pop_worldbank.csv
Notebooks/: Chess Stats.ipynb  Chess Stats.py  Cleaning.ipynb  Cleaning.py  Gender Gap.py  Scrapping.ipynb  Scrapping.py  World stats.ipynb  World stats.py
Notebooks/.ipynb_checkpoints/: Chess Stats-checkpoint.ipynb  Cleaning-checkpoint.ipynb  Gender Gap-checkpoint.ipynb  World stats-checkpoint.ipynb
Writing/: chesspop.md
sandbox/: active.py  animation.ipynb  animation.py  dash_animation.py  main.py  plotly.ipynb  plotly_animation.py  scatter.html  simul.py  simul2.py  simul3.py  static.py
