[project]
name = "chess-stats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cufflinks>=0.17.3",
    "dash>=4.0.0",
    "geopandas>=1.1.3",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "jupytext>=1.19.1",
]
